--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-            <title>Document</title>
+            <title>rxyzal</title>
 
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
 
