--- a/index.html
+++ b/index.html
@@ -484,9 +484,10 @@
 
                     <a href="https://facebook.com" class="facebook"><i class="fab fa-facebook"></i></a>
 
-                    <a href="#" class="insta"><i class="fab fa-google"></i></a>
+                    <a href="https://instagram.com/rxyzal" class="insta"><i class="fab fa-instagram"></i></a>
 
-                    <a href="#" class="yt"><i class="fab  fa-whatsapp"></i></a>
+                    <a href="https://wa.me/62895336763965" class="wa"><i class="fab  fa-whatsapp"></i></a>
+                    <a href="https://github.com/rizal333" claass="gh"><i class"fab fa-github"></i></a>
 
         
 
