--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 
                    
 
-                    <a href="https://facebook.com" class="facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100061287866064&mibextid=ZbWKwL" class="facebook"><i class="fab fa-facebook"></i></a>
 
                     <a href="https://instagram.com/rxyzal" class="insta"><i class="fab fa-instagram"></i></a>
 
