--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <head>
 
             <meta charset="UTF-8">
+                <meta name="google-adsense-account" content="ca-pub-8354745016665961">
 
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
